--- a/SchoolBusCliker/app/src/main/AndroidManifest.xml
+++ b/SchoolBusCliker/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.SchoolBusCliker"
         tools:targetApi="31">
         <activity
+            android:name=".ReservationGoHomeListFragment"
+            android:exported="false" />
+        <activity
+            android:name=".ReservationGoSchoolListFragment"
+            android:exported="false" />
+        <activity
             android:name=".MyInformation"
             android:exported="false" />
         <activity
