date : 23-02-28 add : 시내 등교버스 예약 구현 완료, 1차 UI 디자인 구축, 예약정보 구현 완료, 아이템 없을 시 데이터를 찾을 수 없음 메시지 표기, 로그아웃, 액티비티 전환 애니메이션 추가

--- a/SchoolBusCliker/app/src/main/AndroidManifest.xml
+++ b/SchoolBusCliker/app/src/main/AndroidManifest.xml
@@ -18,10 +18,19 @@
         android:theme="@style/Theme.SchoolBusCliker"
         tools:targetApi="31">
         <activity
-            android:name=".BusReservation_D1_BusStop"
+            android:name=".BusReservation_H_BusStop"
             android:exported="false" />
         <activity
-            android:name=".BusReservation_D1_Date"
+            android:name=".BusReservation_H_Date"
+            android:exported="false" />
+        <activity
+            android:name=".BusReservation_D_BusStop"
+            android:exported="false" />
+        <activity
+            android:name=".BusReservation_D_Date"
+            android:exported="false" />
+        <activity
+            android:name=".MaBusReservation_D3_BusStop"
             android:exported="false" />
         <activity
             android:name=".ReservationGoHomeListFragment"
