--- a/SchoolBusCliker/app/src/main/AndroidManifest.xml
+++ b/SchoolBusCliker/app/src/main/AndroidManifest.xml
@@ -69,6 +69,13 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="adfghupu9a" />
+
+        <!-- QRCode Scan -->
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation" />
+
     </application>
 
 </manifest>
