--- a/TestProject/ScanQR/app/build.gradle
+++ b/TestProject/ScanQR/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    namespace 'com.cafe24.as8794.schoolbuscliker'
-    compileSdk 33
+    namespace 'kr.ac.mokwon.scanqr'
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.cafe24.as8794.schoolbuscliker"
-        minSdk 27
-        targetSdk 33
+        applicationId "kr.ac.mokwon.scanqr"
+        minSdk 21
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -22,6 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        viewBinding true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -30,21 +35,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    // 네이버 지도 SDK
-    implementation 'com.naver.maps:map-sdk:3.16.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
-    // Volley
-    implementation 'com.android.volley:volley:1.2.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //QR-Code (minSDK: 23)
     implementation ('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
